syntax = "proto3";

package orders;

service OrderService {
  rpc CreateOrder (CreateOrderReq) returns (Order) {};
  rpc CancelOrder (OrderById) returns (Order) {};
  rpc CheckStatus (OrderById) returns (OrderStatus) {};
}

message OrderById {
  int32 order_id = 1;
}

message CreateOrderReq {
  string customer_name = 1;
  string address = 2;
  string phone = 3;
  string delivery_date = 4;
  double amount_money = 5;
}
message Order {
  int32 order_id = 1;
  string customer_name = 2;
  string address = 3;
  string phone = 4;
  string delivery_date = 5;
  double amount_money = 6;
  string status = 7;
  string created_at = 8;
  string updated_at = 9;
}

message OrderStatus {
  string status = 1;
}